# home_color_system

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  app.cpp  deps.bzl  main.cc  main.cpp  main.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bazel_build.yml
app/core/: BUILD.bazel  dmx_controller.cpp  dmx_controller.hpp
app/ui/: BUILD.bazel  lighting_viewmodel.cpp  lighting_viewmodel.hpp  main.qml
