load("@rules_qt//:qt.bzl", "qt_cc_binary")

cc_binary(
    name = "main_target",
    srcs = [
        "main.cc",
    ],
    # copts = select({
    #     ":verbose_on": ["-DVERBOSE"],
    #     ":verbose_off": [],
    #     "//conditions:default": [],
    # }),
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_widgets",
    ],
)

config_setting(
    name = "verbose_on",
    values = {"define": "VERBOSE=1"},
)

config_setting(
    name = "verbose_off",
    values = {"define": "VERBOSE=0"},
)
