load("@rules_qt//:qt.bzl", "qt_cc_binary")

qt_cc_binary(
    name = "hello_world",
    srcs = ["app.cpp"],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_widgets",
    ],
)

config_setting(
    name = "verbose_on",
    values = {"define": "VERBOSE=1"},
)

config_setting(
    name = "verbose_off",
    values = {"define": "VERBOSE=0"},
)
