load("@rules_qt//:qt.bzl", "qt_cc_binary")

qt_cc_binary(
    name = "dmx_gui",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//app/ui:lighting_viewmodel",
        "//app/ui:app_qml",
    ],
)

config_setting(
    name = "verbose_on",
    values = {"define": "VERBOSE=1"},
)

config_setting(
    name = "verbose_off",
    values = {"define": "VERBOSE=0"},
)
